[BE][Task] Update API response  (#31)
* Update API response
